# tidb-self-healing-db-agent

./: .env.example  .gitignore  LICENSE  agent.py  branch_manager.py  db_manager.py
mcp_server/: README.md  prompts.py  pyproject.toml  server.py  state.py
mcp_server/tools/: __init__.py  branch_ops.py  branches.py  diagnostics.py
